<resources>
    <string name="app_name">Курсы валют</string>
    <string name="hint_for_city">Выберите город</string>
    <string name="buy">Покупка</string>
    <string name="sale">Продажа</string>
    <string name="currency">Валюта</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="rub">RUB</string>
    <string name="waiting_message">Пожалуйста подождите</string>
    <string name="no_internet_message">Нет подключения к интернету</string>
    <string name="timeout_error">Время ожидания ответа истекло</string>
    <string name="start_message">Здесь появятся банки</string>
    <string-array name="cities">
        <item>Брест</item>
        <item>Витебск</item>
        <item>Гомель</item>
        <item>Гродно</item>
        <item>Минск</item>
        <item>Могилёв</item>
    </string-array>
</resources>